--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon ./src/server.js"
+        "dev": "nodemon ./src/server.js",
+        "migrate": "node-pg-migrate"
     },
     "keywords": [],
     "author": "",
@@ -14,7 +15,10 @@
     },
     "dependencies": {
         "@hapi/hapi": "^21.3.2",
+        "dotenv": "^16.3.1",
         "joi": "^17.11.0",
-        "nanoid": "^3.3.6"
+        "nanoid": "^3.3.6",
+        "node-pg-migrate": "^6.2.2",
+        "pg": "^8.11.3"
     }
 }
